2011-10-30 Tim Marston <edam@waxworlds.org>

	* gtypist.c, utf8.c/h, cursmenu.c: get_widech() uses ints to avoid
	  using wint_t, which is broken on Windows. Also, simplified reading
	  characters so that get_widech() is always used. It also now
	  handles windows newline characters for us.

2011-10-26 Felix Natter <fnatter@gmx.net>

	* gtypist.c, utf8.c/h: add get_widech() wrapper which
	  calls getch() or get_wch() depending on whether it's a UTF8
          console or not => fixes input problems with KOI8-R terminals
	* script.c, gtypist.c: try to read (convertFromUTF8()) the whole
	  lesson at the very beginning, in order to terminate at the very
          beginning in the case of conversion errors (and not in the middle
	  of typing)

2011-10-24 Felix Natter <fnatter@gmx.net>

	* gtypist.c, utf8.c/h: use convertFromUTF8() instead of widen()
	  for Y/N and R/N/E. add towideupper() and iswideupper() helper
	  functions that do they right thing depending on whether it's
	  a UTF8 terminal or an 8bit-terminal

2011-10-22 Felix Natter <fnatter@gmx.net>

	* *.c, *.h: make gtypist run on non-utf8 locales with
	  international lessons
	* gtypist.c: add RETURN_CHARACTER (unicode symbol to designate
	  newlines that must be typed)

2011-10-14 Tim Marston <edam@waxworlds.org>

	* gtypist.c, cursmenu.c, script.h: minor fixes to get gtypist to
	  build under MinGW
	* gtypist.c: removed call to MessageBeep() on windows, since it just
	  corrupts the stack! Currently we don't beep on error on windows, as
	  sending ASCII_BELL to the terminal just pauses and does no "bell".

2011-08-07 Felix Natter <fnatter@gmx.net>

	* utf8.c: new wchar_t* widen(char*) helper function
	* gtypist.c: widen the YN and RNE strings, but their usage isn't yet
	  fixed

2011-07-08 Felix Natter <fnatter@gmx.net>

	* utf8.c, utf8.h: use proper #define before #include for cchar_t
	  (needed for wide character output)

2011-02-28  Tim Marston <edam@waxworlds.org>
